@@ -8,8 +8,8 @@ Build-Depends-Indep: debhelper, libparams-validate-perl, libmailtools-perl, libm
 
 Package: debbugs
 Architecture: all
-Depends: perl5 | perl, exim4 | mail-transport-agent, libmailtools-perl, ed, libmime-perl, libio-stringy-perl, libmldbm-perl, liburi-perl, libsoap-lite-perl, libcgi-simple-perl, libparams-validate-perl
-Recommends: apache | httpd, links | lynx
+Depends: ${perl:Depends}, exim4 | mail-transport-agent, libdebbugs-perl
+Recommends: debbugs-web
 Suggests: spamassassin (>= 3.0), libcgi-alert-perl
 Description: The bug tracking system based on the active Debian BTS
  Debian has a bug tracking system which files details of bugs reported by
@@ -21,3 +21,29 @@ Description: The bug tracking system based on the active Debian BTS
  See /usr/share/doc/debbugs/README.Debian after installation.
  .
  Note: there might be various issues with this package, caveat emptor.
+
+Package: libdebbugs-perl
+Architecture: all
+Depends: ${perl:Depends}, libmailtools-perl, ed, libmime-perl, libio-stringy-perl, libmldbm-perl, liburi-perl, libsoap-lite-perl, libcgi-simple-perl, libparams-validate-perl
+Description: modules used by the active Debian BTS
+ Debian has a bug tracking system which files details of bugs reported by
+ users and developers. Each bug is given a number, and is kept on file until
+ it is marked as having been dealt with. The system is mainly controlled by
+ e-mail, but the bug reports can be viewed using the WWW.
+ .
+ This package contains the perl modules used by the bug tracking
+ system, some of which may be suitable for custom scripts which
+ interact with local debbugs mirrors.
+
+Package: debbugs-web
+Architecture: all
+Depends: libdebbugs-perl, apache | httpd
+Suggests: libcgi-alert-perl
+Description: web scripts for the active Debian BTS
+ Debian has a bug tracking system which files details of bugs reported by
+ users and developers. Each bug is given a number, and is kept on file until
+ it is marked as having been dealt with. The system is mainly controlled by
+ e-mail, but the bug reports can be viewed using the WWW.
+ .
+ This package contains the cgi scripts necessary to view bugreports
+ using the web.
