@@ -181,6 +181,8 @@ debbugs (2.4.2) UNRELEASED; urgency=low
       (closes: #428056)
     - Don't doubly select users
     - Implement versioning aware archiving support (closes: #419693)
+    - Split out packages so that you don't have to install the mail stuff
+      unless you want it.
 
   
  -- Colin Watson <cjwatson@debian.org>  Fri, 20 Jun 2003 18:57:25 +0100
